<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="50dp">

            <Button
                android:id="@+id/btnResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:onClick="resultOnClick"
                android:text="@string/result_button_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="NotSibling" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorAccent"
                android:onClick="submitOnClick"
                android:text="@string/submit_button_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnResult" />

            <Button
                android:id="@+id/btnData"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:onClick="dataOnClick"
                android:text="@string/data_button_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />

            <Button
                android:id="@+id/btnCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="50dp"
                android:background="@android:color/holo_blue_bright"
                android:onClick="callOnClick"
                android:text="@string/call_button_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnData" />
        </LinearLayout>


    </ScrollView>




</android.support.constraint.ConstraintLayout>